# karukan

./: README.md  flake.nix
.github/workflows/: karukan-im-ci.yml
karukan-cli/: Cargo.toml
karukan-engine/: Cargo.toml  README.md
karukan-engine/src/: kana.rs  learning.rs  lib.rs
karukan-engine/src/kanji/: llamacpp.rs
karukan-engine/src/romaji/: converter.rs
karukan-im/: Cargo.toml  README.md
karukan-im/config/: default.toml
karukan-im/fcitx5-addon/src/: karukan.cpp  karukan.h
karukan-im/include/: karukan.h
karukan-im/src/config/: settings.rs
karukan-im/src/core/: candidate.rs  keycode.rs  state.rs
karukan-im/src/core/engine/: conversion.rs  cursor.rs  display.rs  init.rs  input.rs  mod.rs  mode.rs  segmentation.rs  types.rs
karukan-im/src/core/engine/tests/: alphabet.rs  basic.rs  candidates.rs  conversion.rs  fkeys.rs  input_table.rs  katakana.rs  live_conversion.rs  mod.rs  mode_toggle.rs  passthrough.rs
karukan-im/src/ffi/: lifecycle.rs  mod.rs  query.rs  tests.rs
